# perceptron

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/: perceptron.py
src/perceptron/: perceptron.py
tests/: pyproject.toml  test_perceptron.py
tests/src/perceptron/: perceptron.py
